--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>مدرسة صابر لتعليم السياقة</title>
+
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="icon" type="image/png" href="favicon.png">
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PBXCZ5W0CB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PBXCZ5W0CB');
+  </script>
 </head>
 
 <body>
